@@ -55,7 +55,7 @@ void parse_args(int argc, ACE_TCHAR* argv[], bool& reliable)
 int
 ACE_TMAIN(int argc, ACE_TCHAR *argv[])
 {
-  bool ok = true;
+  int status = EXIT_SUCCESS;
   try {
     // Initialize DomainParticipantFactory
     DDS::DomainParticipantFactory_var dpf =
@@ -166,10 +166,10 @@ ACE_TMAIN(int argc, ACE_TCHAR *argv[])
     if (reliable && data_consistent && received < num_messages_expected) {
       std::cout << "ERROR: data loss (" << received << "/"
                 << num_messages_expected << " received)\n";
-      ok = false;
+      status = EXIT_FAILURE;
     }
     else if (!data_consistent) {
-      ok = false;
+      status = EXIT_FAILURE;
     }
     else {
       const unsigned int percent = ((num_messages_expected - received) * 100) / num_messages_expected;
@@ -178,16 +178,22 @@ ACE_TMAIN(int argc, ACE_TCHAR *argv[])
     }
 
     // Clean-up!
+    ACE_DEBUG((LM_DEBUG, "Subscriber delete contained entities\n"));
     participant->delete_contained_entities();
+    ACE_DEBUG((LM_DEBUG, "Subscriber delete participant\n"));
     dpf->delete_participant(participant);
 
+    ACE_DEBUG((LM_DEBUG, "Subscriber shutdown\n"));
     TheServiceParticipant->shutdown();
+    ACE_DEBUG((LM_DEBUG, "Subscriber wait for thread manager\n"));
     ACE_Thread_Manager::instance()->wait();
 
+    ACE_DEBUG((LM_DEBUG, "Subscriber vars going out of scope\n"));
   } catch (const CORBA::Exception& e) {
     e._tao_print_exception("Exception caught in main():");
-    return -1;
+    status = EXIT_FAILURE;
   }
 
-  return ok ? EXIT_SUCCESS : EXIT_FAILURE;
+  ACE_DEBUG((LM_DEBUG, "Subscriber exiting with status=%d\n", status));
+  return status;
 }
